--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "webpack3test",
   "version": "1.0.0",
-  "description": "webpack 3.0",
+  "description": "webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "webpack-dev-server"
   },
   "author": "jls",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^3.6.0"
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   }
 }
